# Boruvka_MST_algorithm

./: fun.gdb
gg/: CMakeLists.txt
gg/src/: main.cpp
mst/: CMakeLists.txt
mst/include/: mst.h  vertex.h
mst/src/: main.cpp  mst.cpp  vertex.cpp
